# hpm_lvgl_spi_st7789

./: .gitignore  LICENSE  README.md  README_CN.md  WARP.md
docs/: HARDWARE.md  HPM6E_DMA_SPI_ST7789.md  HPM_SDK_LVGL_SAMPLES_172x320.md  OFFICIAL_HPM_SDK_BACKEND.md  PORTING.md
examples/lvgl_demos_menu/: CMakeLists.txt  main.c
examples/render_benchmark/: CMakeLists.txt  main.c
examples/tsn_dashboard/: CMakeLists.txt  main.c
patches/: hpm_sdk_lvgl_ui_small_screen.patch
src/: CMakeLists.txt  hpm_lvgl_spi.c  hpm_lvgl_spi.h  lv_conf.h  lv_conf_ext.h  lv_conf_standalone.h  st7789.c  st7789.h
